--- a/css/style.css
+++ b/css/style.css
@@ -180,3 +180,40 @@ p {
     transition: all 0.3s ease-out;
     
 }
+.navigation-wrap .nav-item{
+    padding: 0 0.625rem;
+    transition: all 200ms linear;
+}
+.navigation-wrap .nav-item{
+    padding: 0 0.625rem;
+    transition: all 200ms linear;
+}
+.navbar-toggler:focus{
+    outline:unset;
+    border: unset;
+    box-shadow: none;
+}
+.nav-link{
+    font-size:0.9375rem ;
+    font-weight: 600;
+    text-transform: capitalize;
+    color: var(--primary-color);
+    letter-spacing: 1px;
+}
+.navigation-wrap .main-btn{
+    padding: 0.3125rem 1.4375rem;
+    box-shadow: none;
+    margin-left: 0.625rem;
+    white-space: nowrap;
+}
+.navigation-wrap.scroll-on{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background: var(--white-color);
+ box-shadow: 0 0.125rem 1.75rem 0 rgb(0,0,0,0.9);
+ transition: all .15s ease-in-out 0s;
+}
+
+
