--- a/css/style.css
+++ b/css/style.css
@@ -215,5 +215,17 @@ p {
  box-shadow: 0 0.125rem 1.75rem 0 rgb(0,0,0,0.9);
  transition: all .15s ease-in-out 0s;
 }
+/* 
+==============================
+   top-banner Design
+==============================
+*/
+
+.top-banner{
+    width: 100%;
+    background: url('../images/bg/bg-1.jpg') no-repeat center;
+    background-size: cover;
+    padding: 16.875rem 0 9.375rem;
+}
 
 
