--- a/css/style.css
+++ b/css/style.css
@@ -227,5 +227,20 @@ p {
     background-size: cover;
     padding: 16.875rem 0 9.375rem;
 }
+/* 
+==============================
+   counter Design
+==============================
+*/
+
+.counter-section{
+    background-color: var(--primary-color);
+    padding: 2.5rem 0;
+}
+
+.counter-section p{
+    color: var(--white-color);
+    text-transform: uppercase;
+}
 
 
