--- a/css/responsive-style.css
+++ b/css/responsive-style.css
@@ -1,20 +1,33 @@
-@media (max-width: 1024px) {
-
-    /* about section */
-
-}
-
 @media (max-width: 991px) {
 
     /* custom classes */
+    .text-content{
+        width: 100%;
+    }
 
     /* navbar brand */
+    .navigation-wrap .navbar-brand img{
+        height: 3.8125rem;
+    }
+
+    .navigation-wrap{
+        text-align: center;
+        background-color: var(--white-color);
+    }
+
+    .navigation-wrap .nav-link{
+        line-height: 1.875rem;
+    }
+}
+
+    /* navbar brand */
+
 
     /* Banner Design */
 
     /* carousel design */
 
-}
+
 
 @media (max-width: 767px) {
 
